﻿# Changelog
Comprehensive changes can be found in Git change history:
	https://github.com/mkahvi/taskmaster/commits/master

## [0.11...]
### 2018-11-17
	Internal: A lot of changes that had been left for later. At most fixed some obscure bugs.
### 2018-11-16
	Fixed: Wrong power mode selected in watchlist edit window.
	Changed: Power mode changes don't show for watchlist modifications to avoid spammyness from background powerdown setting.
	Added: Background affinity and priority control to watchlist edit window. Formerly only available via direct .ini editing.
	Added: Audio control to watchlist edit window. Formerly ony available via direct .ini editing.
	Changed: Watchlist edit window is now a little more logically sorted.
	FIXED: Components are now saved! This was broken not too long ago. Some other configuration savings were also enforced just in case.
	Changed: Watchlist edit window now has some features disabled if associated component is disabled.
### 2018-11-15
	Internal: Removed as much as possible of Serilog's formatted string usage. This should fix large number of output related bugs.
### 2018-11-13
	Added: 'Background affinity' added to complement 'Background priority' for foreground only option.
	Changed: Background priority application and restoration, it is now smarter about it.
	Internal: Massive refactoring, things may have broken.
### 2018-11-12
	Added: 'Path visibility' option to Watchlist. Currently only configurable directly through the .ini.
		Valid values are: 0=File (default), 1=File+Folder, 3=Full Path
		2 will be for "smart" visibility which is not yet implemented
	Added: Show inaction option now shows inaction relating to 'Ignore System32' option in Core.ini
	Changed: "# not paused; not resuming" message pushed to foreground debug.
	Changed: Better foreground debugging in general.
	Fixed: Bad logging for hung foreground apps.