@@ -5,6 +5,7 @@ Comprehensive changes can be found in Git change history:
 ## [0.11...]
 ### 2018-11-17
 	Internal: A lot of changes that had been left for later. At most fixed some obscure bugs.
+	Fixed: Path visibility option was not actually read from Watchlist.ini
 ### 2018-11-16
 	Fixed: Wrong power mode selected in watchlist edit window.
 	Changed: Power mode changes don't show for watchlist modifications to avoid spammyness from background powerdown setting.
